fix layout issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -151,3 +151,7 @@ nav a {
   display: block;
   font-size: 2.8ch;
 }
+
+.head-img {
+  max-width: 60em;
+}
